--- a/quasar-mqtt/package.json
+++ b/quasar-mqtt/package.json
@@ -11,6 +11,7 @@
     "build": "quasar build"
   },
   "dependencies": {
+    "@mazi1/joystick": "^0.1.3",
     "@quasar/extras": "^1.0.0",
     "mqtt": "^4.3.7",
     "pinia": "^2.0.11",
